syntax = "proto3";

package user;

option go_package = "github.com/vvkuzmych/sneakers_marketplace/pkg/proto/user";

// UserService handles user authentication and profile management
service UserService {
  // Authentication
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  
  // Profile
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  
  // Addresses
  rpc AddAddress(AddAddressRequest) returns (AddAddressResponse);
  rpc GetAddresses(GetAddressesRequest) returns (GetAddressesResponse);
  rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse);
  rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse);
}

// Messages

message User {
  int64 id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  bool is_verified = 6;
  bool is_active = 7;
  string created_at = 8;
  string updated_at = 9;
}

message Address {
  int64 id = 1;
  int64 user_id = 2;
  string address_type = 3; // shipping, billing
  string street_line1 = 4;
  string street_line2 = 5;
  string city = 6;
  string state = 7;
  string postal_code = 8;
  string country = 9;
  bool is_default = 10;
  string created_at = 11;
}

// Register
message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
}

message RegisterResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  string error = 4;
}

// Login
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  string error = 4;
}

// RefreshToken
message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  string error = 3;
}

// Logout
message LogoutRequest {
  string access_token = 1;
}

message LogoutResponse {
  bool success = 1;
  string error = 2;
}

// GetProfile
message GetProfileRequest {
  int64 user_id = 1;
}

message GetProfileResponse {
  User user = 1;
  string error = 2;
}

// UpdateProfile
message UpdateProfileRequest {
  int64 user_id = 1;
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
}

message UpdateProfileResponse {
  User user = 1;
  string error = 2;
}

// AddAddress
message AddAddressRequest {
  int64 user_id = 1;
  string address_type = 2;
  string street_line1 = 3;
  string street_line2 = 4;
  string city = 5;
  string state = 6;
  string postal_code = 7;
  string country = 8;
  bool is_default = 9;
}

message AddAddressResponse {
  Address address = 1;
  string error = 2;
}

// GetAddresses
message GetAddressesRequest {
  int64 user_id = 1;
}

message GetAddressesResponse {
  repeated Address addresses = 1;
  string error = 2;
}

// UpdateAddress
message UpdateAddressRequest {
  int64 address_id = 1;
  int64 user_id = 2;
  string address_type = 3;
  string street_line1 = 4;
  string street_line2 = 5;
  string city = 6;
  string state = 7;
  string postal_code = 8;
  string country = 9;
  bool is_default = 10;
}

message UpdateAddressResponse {
  Address address = 1;
  string error = 2;
}

// DeleteAddress
message DeleteAddressRequest {
  int64 address_id = 1;
  int64 user_id = 2;
}

message DeleteAddressResponse {
  bool success = 1;
  string error = 2;
}
